--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,16 @@
-.rowmargin{
-    margin-bottom: 20px;
+.container{
+    border-style: double;
+}
+.page-header{
+display: flex;
+justify-content: center;
+font-style: Sans-serif;
 }
 
+
 body{
-    background-color: darkslategrey;
-    color:rgb(255, 255, 255);
-    font-size: larger;
+    background-color: rgb(229, 236, 231);
+    color:rgb(15, 9, 9);
+    font-size: medium;
 }
 
