--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,16 @@
 .container{
-    border-style: double;
+    border-style: groove;
 }
+
 .page-header{
-display: flex;
-justify-content: center;
+    text-align: center;
+    padding: 20px;
 font-style: Sans-serif;
 }
 
+.col-md-3{
+    border-style: groove;
+}
 
 body{
     background-color: rgb(229, 236, 231);
