--- a/assets/style.css
+++ b/assets/style.css
@@ -1,20 +1,229 @@
-.container{
-    border-style: groove;
-}
-
-.page-header{
-    text-align: center;
-    padding: 20px;
-font-style: Sans-serif;
-}
-
-.col-md-3{
-    border-style: groove;
-}
-
+  
 body{
-    background-color: rgb(229, 236, 231);
-    color:rgb(15, 9, 9);
-    font-size: medium;
+    width: 960px;
+    font-family: 'Krub', 'Open Sans', sans-serif;
+    background-color: white;
 }
+/* Color changes for Jumbotron */
+.jumbotron{
+    background-color: rgba(167, 210, 203, 0.7);
+    color: #874c62;
+}
+.lead, .jumbo-text{
+    color: #000000;
+}
+.btn-color{
+    background-color: #f2d388;
+    color: #874c62;
+}
+.container{
+    font-family: 'Krub', 'Open Sans', sans-serif;
+    background-color: white;
+    position: relative;
+    margin: auto;
+}
+#masthead{
+    font-family: 'Krub', 'Open Sans', sans-serif;
+    position: relative;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    border-bottom:solid;
+    border-color: #f2d388;
+}
+.logo{
+    margin-left: 20px;
+    font-size: 32px;
+    text-decoration: none;
+}
+nav{
+    color: #874c62;
+    position: absolute;
+    right: 0;
+    margin-top: -18px;
+    margin-right: 20px;  
+}
+li{
+    list-style-type: none;
+    display: inline;
+    color: #874c62;
+    text-align: right;
+}
+#anch{
+    color: #c98474;
+    display: block, inline;
+    padding: 8px;
+    /* border-style: solid; */
+    /* border-color: #874c62; */
+    text-decoration: none;
+}
+#main-container{
+    width: 75%;
+    color: #874c62;
+    position: relative;
+    font-size: 20px;
+    margin-top: 50px;
+    margin: auto;
+}
+.main-section{
+    width: 100%;
+    margin-top: 50px;
+    display: inline-block;
+    background-color: white;
+    /* border-style: solid; */
+    border-color: #874c62;
+    margin-bottom: 50px;
+}
+.bio-image{
+    float: left;
+    width: 150px;
+    height: 200px;
+    margin: 15px;
+    border-style: solid;
+    border-color: #874c62;
+}
+p {
+    color: #874c62;
+    padding: 10px;
+    line-height: 30px;
+}
+.footer{
+    line-height: 150%;
+    text-align: center;
+    background-color: #874c62;
+    height: 25px;
+    border-style: solid;
+    border-color: #f2d388;
+}
+.about-me{
+    padding: 10px;
+    width: 33.3%;
+    margin-bottom: -30px;
+    font-size: 32px;
+    color: #c98474;
+    border-bottom: 2px double;
+    border-color: #f2d388;
+}
+#form{
+    position: relative;
+    margin-left: 120px;
+    margin-right: 120px;
+    padding: 20px;
+    margin-top: 50px;
+    display: inline-block;
+    margin-bottom: 50px;
+    resize: vertical;
+    width: 75%;
+}
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #874c62;
+    background-color: rgba(167, 210, 203, 0.7);
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+input[type=submit] {
+    background-color: #f2d388;
+    color: #874c62;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+input[type=submit]:hover {
+    background-color: #c98474;
+}
+.work{
+    position: relative;
+    margin-left: 90px;
+    margin-top: 20px;
+    width: 33%;
+    color: #874c62;
+    display: inline-block;
+}
+img:hover{
+    border-style: solid;
+    border-color: white;
+    border-width: 3px;
 
+}
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+.page-header{
+    color: #874c62;
+    font-size: 32px;
+    padding: 20px;
+    text-decoration: underline;
+}
+/* .img-portfolio{
+    margin: auto;
+} */
+/* For Tablet Screen
+@media only screen and (max-width: 768px)  {
+    #navbar{
+        color: #874c62;
+        position: absolute;
+        right: 0;
+        margin-top: -18px;
+        margin-right: 20px; 
+    }
+    body{
+        width: 100%;
+    }
+    .about-me{
+        width: 100%;
+    }
+    #form{
+        width: ;
+        margin-left: auto;
+        margin-right: auto;
+        display: inherit;
+    }
+    .work{
+        margin-left: 10%;
+    }
+}
+/* For Mobile Phones */
+/* @media only screen and (max-width: 640px)  {
+    #logo{
+        width: 195px;
+        position: relative;
+        margin-left: auto;
+        margin-right: auto;
+        display: block
+        
+    }
+    #navbar{
+        width: 230px;
+        margin-top: 25px;
+        display: inherit;
+        margin-left: auto;
+        margin-right: auto;
+        position: relative;
+    }
+    body{
+        width: 100%;
+    }
+    .about-me{
+        width: 100%;
+        text-align: center;
+    }
+    #form{
+        width: ;
+        margin-left: auto;
+        margin-right: auto;
+        display: inherit;
+    }
+    .work{
+        display: inline-block;
+        margin-left: 20%;
+        margin-right: auto;
+    }
+} */
